# python-gtk3-meson

./: README.md  example.py  meson.build  update-translation.sh
data/: org.example.application.desktop  org.example.application.gschema.xml  org.example.application.policy
example/: Actions.py  MainWindow.py  main.py  util.py
example/ui/: MainWindow.ui
po/: example.pot  tr.po
